# simulador-por-eventos

./: README.md  ejercicio7.py  punto7.py  pyproject.toml  random_variables.py  random_variables_jero.py  simulation9.py  simulation_10_report.txt  simulation_9_report.txt  single_queue.py  taller.ipynb
.ipynb_checkpoints/: taller-checkpoint.ipynb
source/: pyproject.toml
source/randomVar/: a3.py  a4.py  composición.py  inverse.py  inverse_5.py  rejection.py
source/simulations/: simulation_10.py  simulation_11.py  simulation_11d_report.txt  simulation_11e_report.txt  simulation_8.py  simulation_9.py
