[project]
name = "simulador-por-eventos"
version = "0.1.0"
description = "Trabajo modelos y simulacion, generacion de variables aleatorias y simuladores por eventos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numba>=0.61.2",
    "numpy>=2.2.5",
]
